instructions.InstructionsDrawG.scala.code
baisseBrosse()
setCouleurBrosse(c:Blue)
gauche()
avance(4)
gauche()
avance(4)
gauche()
avance(4)
gauche()
avance(2)
gauche()
avance()
leveBrosse()
